--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.sql.init.mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/winyourlife_db
 spring.datasource.username=postgres
 spring.datasource.password=zpzprz
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.jpa.properties.hibernate.default_schema=winyourlife
 
