--- a/pom.xml
+++ b/pom.xml
@@ -228,7 +228,17 @@
               <expandEmptyElements>false</expandEmptyElements>
             </sortPom>
           </pom>
+          <sql>
+            <!-- You have to set the target manually -->
+            <includes>
+              <include>src/main/resources/**/*.sql</include>
+            </includes>
+
+            <dbeaver/>
+            <!-- has its own section below -->
+          </sql>
         </configuration>
+
         <executions>
           <execution>
             <goals>
